--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html >
 <html ng-app='ecommApp'>
 
-<head><title>Ecommerce</title>
-
+<head>
+    <title>Ecommerce</title>
     <link rel="stylesheet" type="text/css" href="css/login.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" charset="utf-8">
 </head>
 
 <body>
     <div class="container">
         <div class="col-md-3"></div>
-        <div class="col-md-3" >
-          <div ng-view>
-            
-          </div>
-            
+        <div class="col-md-3">
+            <div ng-view>
+            </div>
         </div>
         <div class="col-md-3"></div>
     </div>
-   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.min.js"></script>
-   <script src="angular/controller/angular-app.js"></script>
-   <script src="angular/controller/routes.js"></script>
-   <script src="angular/controller/productController.js"></script>
+    <script src="angular/controller/angular-app.js"></script>
+    <script src="angular/controller/routes.js"></script>
+    <script src="angular/controller/productController.js"></script>
     <script src="angular/services/services.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="modal.js"></script>
 </body>
 
 </html>
